# igreja-lanchonete

./: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js  tailwind.css
public/: tailwind.css
src/: main.rs
src/API/: item.rs
src/components/: mod.rs
src/components/item/: item.rs  item_service.rs
src/components/review_item/: mod.rs  review_item.rs
src/item/: item.rs  item_service.rs  mod.rs
src/pages/: menu.rs  menu_service.rs  mod.rs
