[package]
name = "igreja-lanchonete"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.0-alpha.2", features = ["web"] }
log = "0.4.21"
manganis = "0.2.1"
dioxus-logger = { version = "*", features = ["timestamps"] }
wasm-logger = "0.2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

